<resources>
    <string name="app_name">CovidTester</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="TestDate">Datum Testu:</string>
    <string name="fotoTest">Foto Testu</string>
    <string name="result">Výsledek testu: </string>
    <string name="positive">Pozitivní</string>
    <string name="negative">Negativní</string>
    <string name="submit">Odeslat</string>
    <string name="note">Poznámka</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="file_provider_path" translatable="false">com.nvsp.covidtester.fileprovider</string>

</resources>